<package format="2">
  <name>generic_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     Provides a collection of generic states mainly for development and debugging purposes.
  </description>
  <maintainer email="philipp.schillinger@de.bosch.com">Philipp Schillinger</maintainer>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexbe_manipulation_states</exec_depend>
  <exec_depend>flexbe_navigation_states</exec_depend>
  <exec_depend>flexbe_utility_states</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
